<?xml version="1.0"?>
<package format="2">
  <name>multi_robot_goals</name>
  <version>0.1.0</version>
  <description>The multi_robot_goals package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>---</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>wakeb_swarm_msgs</depend>


  <export>

  </export>
</package>